# agts

АСО АНТС/: Readme.md  config.ini  pyproject.toml
АСО АНТС/Modules/: HandlerDispatcher.py
АСО АНТС/Modules/Context/: Context.py  Mission.py  Robot.py  SmartPolygonDevices.py
АСО АНТС/Modules/Core/: BaseUDPio.py
АСО АНТС/Modules/Handler/: CommandInterface.py  HTTPTransport.py  MissionHandler.py  PositionReceiveHandler.py  RenderHandler.py  SmartPolygonDevicesHandler.py  __init__.py
АСО АНТС/Modules/Logic/: Geometry.py  const.py
АСО АНТС/logs/: log_2026-03-17_12-27-13.879781.txt  log_2026-03-17_15-41-55.700766.txt  log_2026-03-18_11-42-19.981268.txt  log_2026-03-19_12-07-50.106726.txt  log_2026-03-19_12-55-24.425127.txt  log_2026-03-19_13-35-47.289947.txt  log_2026-03-24_11-40-45.197570.txt  log_2026-03-24_13-56-26.040290.txt  log_2026-03-25_11-46-57.997854.txt  log_2026-03-26_11-41-30.386297.txt  log_2026-03-27_12-16-13.531851.txt  log_2026-03-27_13-06-58.017568.txt  log_2026-03-27_13-39-08.483358.txt
Клиент АНТС/: Readme.md  pyproject.toml
Клиент АНТС/src/ModuleA/: mod_A_code.ipynb
Клиент АНТС/src/ModuleA/.ipynb_checkpoints/: mod_A_code-checkpoint.ipynb
Клиент АНТС/src/ModuleA/logs/: log_2026-03-30_12-29-33.333177.txt
Клиент АНТС/src/ModuleB/: mod_B_code.ipynb
Клиент АНТС/src/ModuleB/.ipynb_checkpoints/: mod_B_code-checkpoint.ipynb
Клиент АНТС/src/ModuleG/: mod_G_code.ipynb
Клиент АНТС/src/ModuleG/.ipynb_checkpoints/: mod_G_code-checkpoint.ipynb
Клиент АНТС/src/ModuleV/: mod_V_code.ipynb
Клиент АНТС/src/libs/: __init__.py
(+156 files in other folders)
